test/spec_vectors/simd_load_splat/fail/module_3.wat
(module (memory 0) (func (result v128) (v128.load16_splat (v128.const i32x4 0 0 0 0))))